--- a/main/app/bower.json
+++ b/main/app/bower.json
@@ -22,6 +22,7 @@
     "c3": "^0.4.11",
     "jquery": "^2.2.4",
     "weather-icons": "^2.0.10",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.37"
+    "eonasdan-bootstrap-datetimepicker": "^4.17.37",
+    "angular-i18n": "^1.5.7"
   }
 }
