Commit last changes from pi.

--- a/main/config.toml
+++ b/main/config.toml
@@ -3,8 +3,8 @@ app_port = "8080"
 [database]
 server = "localhost"
 port = "8086"
-root_db = "test"
-series = "meas"
+root_db = "weather_data"
+series = "sensors"
 
 [app]
 path = "./app/"
